# dnd_search

./: .gitignore  LICENSE  LICENSE-CC-BY-SA  LICENSE-MIT  README.md  TODO.md  flake.nix  main.py  pyproject.toml  requirements.txt  shell.nix  venv.sh
.github/workflows/: release.yml  update-flake.yaml
dnd_search/: __init__.py  __main__.py  cache.py  cli.py  formatters.py  logger.py  models.py  scraper.py
src/dnd_search/: api.py  class_api.py  cli.py  dnd_data.py  dnd_data_0.py  format_output.py  spell_api.py
tests/: conftest.py  test_commands.py
