[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnd-search"
version = "0.1.0"
description = "CLI tool for searching D&D 5e content from dnd5e.wikidot.com"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "rich>=13.0",
]

[project.scripts]
dnd-search = "dnd_search.cli:main"
